Use SurfacelessEGL for ozone/wayland, when supported

Since [1], chrome --mash --ozone-platform=wayland fails to
launch in some systems, where the call to
PbufferGLSurfaceEGL::Initialize (ui/gl/gl_surface_egl.cc) fails
at

  EGLSurface new_surface =
      eglCreatePbufferSurface(display, GetConfig(), &pbuffer_attribs[0]);

... because GetConfig does not return a valid EGLConfig instance.

As per @kylechar's advice, this CL opt-in for a SufacelessEGL
creation, if supported, rather than PbufferGLSurfaceEGL, similarly
to how it was prior to [1].

[1] https://codereview.chromium.org/2187443003

BUG=650284,611142

Review-Url: https://codereview.chromium.org/2387063002
Cr-Commit-Position: refs/heads/master@{#422475}

Former-commit-id: 903932cf3bcfa9a0eb58b3660c9bad83c4c7e3d3